--- a/src/index.css
+++ b/src/index.css
@@ -64,11 +64,21 @@ h6 {
 #template-text {
   font-size: 1.2rem;
   font-weight: 400;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
   color: #333;
-  margin: 50px;
-  margin-top: 200px;
+  margin: 20px;
+  margin-top: 50px;
   text-align: center;
   padding: 0;
 }
